[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Levels/Control_Flow/2 - Intro to While Loops.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Level_Components/IDE_Elements/LoopBlock.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelClearedPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Door.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/CodeBlockBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Interact.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/IDE.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Button.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Forward.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/CallLoop.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/TextBox.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelControl.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Robot.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Background.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Grid.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/RotateLeft.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/RotateRight.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Arrow.tscn" type="PackedScene" id=18]

[node name="2 - Intro to While Loops" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 14 )]

[node name="Grid" parent="." instance=ExtResource( 15 )]

[node name="Robot" parent="Grid" instance=ExtResource( 13 )]

[node name="Door" parent="Grid" instance=ExtResource( 4 )]

[node name="Button1" parent="Grid" instance=ExtResource( 8 )]

[node name="Level Control" parent="." instance=ExtResource( 12 )]

[node name="IDE" parent="." instance=ExtResource( 7 )]

[node name="Scopes" parent="IDE" index="0"]
margin_top = 0.0
margin_bottom = 950.0

[node name="Counter" parent="IDE/Scopes/Main/Main" index="2"]
maxBlocks = 3

[node name="ButtonContainer" parent="IDE" index="1"]
margin_top = 954.0
margin_bottom = 1074.0

[node name="Loop1" parent="IDE" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 1078.0
margin_right = 480.0
margin_bottom = 1316.0

[node name="Counter" parent="IDE/Loop1/HighlightControl" index="2"]
maxBlocks = 1

[node name="CodeBlockBar" parent="." instance=ExtResource( 5 )]

[node name="Forward" parent="CodeBlockBar" instance=ExtResource( 9 )]

[node name="RotateLeft" parent="CodeBlockBar" instance=ExtResource( 16 )]

[node name="RotateRight" parent="CodeBlockBar" instance=ExtResource( 17 )]

[node name="Interact" parent="CodeBlockBar" instance=ExtResource( 6 )]

[node name="Call_Loop1" parent="CodeBlockBar" instance=ExtResource( 10 )]

[node name="TextBox" parent="." instance=ExtResource( 11 )]

[node name="PopupMenu" parent="." instance=ExtResource( 3 )]

[node name="Loop_Arrow" parent="." instance=ExtResource( 18 )]
visible = false
position = Vector2( 1350, 600 )
rotation = 1.5708
scale = Vector2( 2, 2 )

[editable path="IDE"]
[editable path="IDE/Scopes/Main/Main"]
[editable path="IDE/Loop1"]
